# search-optimiser-public

./: .gitignore  README.md  app.py  main.py  model_assements.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: sample.csv
domain/: frontier.py  models.py  scenarios.py  validation.py
pages/: 1_📈_Curves.py  2_🧮_Optimize.py  3_📤_Export.py
services/: data.py  export.py  ingest.py  optimize.py  store.py
state/: store.py
ui/: charts.py  custom_css.py  metrics.py  widgets.py
utils/: app_io.py  modelling.py
