[project]
name = "search-optimiser-public"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=1.26",
    "ortools>=9.10",
    "pandas>=2.2",
    "plotly>=5.22",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "scikit-learn>=1.5",
    "scipy>=1.16.2",
    "streamlit>=1.37",
    "streamlit-plotly-events>=0.0.6",
    "streamlit-toggle>=0.1.3",
    "streamlit-vertical-slider>=2.5.5",
]
